# BLE_server

./: Company_ID_2024087.yaml  README.md  config.toml  pyproject.toml
src/ble_server/: data_handler.py  main.py
